# diffusion-from-scratch

./: README.md  main.py  pyproject.toml
notebooks/: forward_diffusion.ipynb
src/diffusion_from_scratch/: attention.py  blocks.py  diffusion.py  diffussion.py  embeddings.py  normalizer.py  unet.py  utils.py
