[tool.poetry]
name = "intern-diffusion-from-scratch"
version = "0.1.0"
description = ""
authors = ["fabianmax <fabian.mueller@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.3"
einops = "^0.4.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
