[tool.poetry]
name = "intern-diffusion-from-scratch"
version = "0.1.0"
description = ""
authors = ["fabianmax <fabian.mueller@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.3"
einops = "^0.4.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
darglint = "^1.8.1"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pep8-naming = "^0.13.2"
pydocstyle = "^6.1.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
